<resources>
    <string name="app_name">FitPic</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_friends_ui">Friends</string>
    <string name="home">Logout</string>
    <string name="map">Map</string>
    <string name="friends">Following</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="title_activity_profile_ui">ProfileUI</string>
    <string name="profile">Profile</string>
    <string name="Follow">Follow</string>
    <string name="Followers">Followers</string>
    <string name="Following">Following</string>
    <string name="Calories_burnt">cal</string>
    <string name="photos">Photos</string>
    <string name="Steps">steps</string>
    <string name="points">points</string>
    <string name="title_activity_update_username">UpdateUsername</string>
    <string name="start_walking">Start Walking</string>
    <string name="title_activity_goals2">GoalsActivity2</string>
    <string name="update">Update!</string>
    <string name="title_activity_view_friend">ViewFriend</string>
    <string name="goals">Goals</string>
    <string name="feed">Feed</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="_0">0</string>
    <string name="enter_address_city_or_zip_code">Enter Address, City or Zip Code</string>
    <string name="search_hint">Type a friends username</string>
    <string name="title_activity_friend_search">FriendSearch</string>
    <string name="search">search</string>
    <string name="title_activity_shop">ShopActivity</string>
    <string name="vip_membership">VIP membership</string>
    <string name="claim">Claim</string>
    <string name="shop">Shop</string>
    <string name="Gallery">Gallery</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
