<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:title="" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_shop"
            android:title="@string/shop" />
        <item
            android:id="@+id/nav_friends"
            android:title="@string/friends" />
        <item
            android:id="@+id/nav_leaderboard"
            android:title="@string/leaderboard" />

        <item
            android:id="@+id/nav_feed"
            android:title="@string/feed" />

    </group>
</menu>
