<?xml version="1.0" encoding="utf-8"?><!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <FrameLayout
        android:id="@+id/fl_content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="com.example.offlinemaps.ProfileUI">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="405dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:background="@drawable/gradientbackground"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="65dp"
                        android:src="@drawable/joy" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:text="Mike Stainer"
                        android:textColor="#fff"
                        android:textSize="21sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <android.support.v7.widget.CardView
                    android:layout_width="400dp"
                    android:layout_height="120dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="275dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/photos"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="10dp"
                                android:text="125"
                                android:textColor="@color/startblue"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Followers"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="10dp"
                                android:text="1205"
                                android:textColor="@color/startblue"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Following"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="10dp"
                                android:text="360"
                                android:textColor="@color/startblue"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="45dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/ic_person_blue" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="ms01640"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/ic_step_counter" />

                    <TextView
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/steps"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/ic_whatshot_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/Calories_burnt"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:background="@drawable/buttonstyle"
                android:text="@string/Follow"
                android:textColor="@color/white" />

        </LinearLayout>
    </FrameLayout>


    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nv_profile"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="false"
        app:menu="@menu/drawer_view" />

</android.support.v4.widget.DrawerLayout>
